--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -604,13 +604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(similar, open(\"similarity\", \"wb\"))\n",
-    "pickle.dump(df, open(\"df\", \"wb\"))"
+    "pickle.dump(similar, open(\"similarity.pkl\", \"wb\"))\n",
+    "pickle.dump(df, open(\"df.pkl\", \"wb\"))"
    ]
   },
   {
