--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,55 +158,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Randy Travis</td>\n",
-       "      <td>Do I Ever Cross Your Mind</td>\n",
-       "      <td>Oh, sometimes I go walking through fields wher...</td>\n",
+       "      <td>Velvet Underground</td>\n",
+       "      <td>I Can't Stand It</td>\n",
+       "      <td>It's hard being a man  \\r\\nLiving in a garbage...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Mary Black</td>\n",
-       "      <td>The Moon And St. Christopher</td>\n",
-       "      <td>When I was young I spoke like a child, And I s...</td>\n",
+       "      <td>Owl City</td>\n",
+       "      <td>Hey Anna</td>\n",
+       "      <td>Hey Anna, it's just a boy you won't understand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Fleetwood Mac</td>\n",
-       "      <td>Big Love</td>\n",
-       "      <td>Looking out for love  \\r\\nIn the night so stil...</td>\n",
+       "      <td>Roy Orbison</td>\n",
+       "      <td>Here Comes The Rain, Baby</td>\n",
+       "      <td>Here comes the rain, baby  \\r\\nGuess it's good...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Stone Roses</td>\n",
-       "      <td>Fools Gold</td>\n",
-       "      <td>The gold road's sure a long road  \\r\\nWinds on...</td>\n",
+       "      <td>Dewa 19</td>\n",
+       "      <td>Kirana</td>\n",
+       "      <td>Kucoba memahami tempatku berlabuh  \\r\\nTerdamp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bonnie Raitt</td>\n",
-       "      <td>Storm Warning</td>\n",
-       "      <td>Storm warning,  \\r\\nFeels like a heavy rain.  ...</td>\n",
+       "      <td>The Monkees</td>\n",
+       "      <td>Come On In</td>\n",
+       "      <td>Come on in,  \\r\\nYou sure look good to me.  \\r...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          artist                          song  \\\n",
-       "0   Randy Travis     Do I Ever Cross Your Mind   \n",
-       "1     Mary Black  The Moon And St. Christopher   \n",
-       "2  Fleetwood Mac                      Big Love   \n",
-       "3    Stone Roses                    Fools Gold   \n",
-       "4   Bonnie Raitt                 Storm Warning   \n",
+       "               artist                       song  \\\n",
+       "0  Velvet Underground           I Can't Stand It   \n",
+       "1            Owl City                   Hey Anna   \n",
+       "2         Roy Orbison  Here Comes The Rain, Baby   \n",
+       "3             Dewa 19                     Kirana   \n",
+       "4         The Monkees                 Come On In   \n",
        "\n",
        "                                                text  \n",
-       "0  Oh, sometimes I go walking through fields wher...  \n",
-       "1  When I was young I spoke like a child, And I s...  \n",
-       "2  Looking out for love  \\r\\nIn the night so stil...  \n",
-       "3  The gold road's sure a long road  \\r\\nWinds on...  \n",
-       "4  Storm warning,  \\r\\nFeels like a heavy rain.  ...  "
+       "0  It's hard being a man  \\r\\nLiving in a garbage...  \n",
+       "1  Hey Anna, it's just a boy you won't understand...  \n",
+       "2  Here comes the rain, baby  \\r\\nGuess it's good...  \n",
+       "3  Kucoba memahami tempatku berlabuh  \\r\\nTerdamp...  \n",
+       "4  Come on in,  \\r\\nYou sure look good to me.  \\r...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Oh, sometimes I go walking through fields where we walked  \\r\\nLong ago in the sweet used to be  \\r\\nAnd the flowers still grow, but they don't smell as sweet  \\r\\nAs they did when you picked them for me  \\r\\n  \\r\\nAnd when I think of you and the love we once knew  \\r\\nHow I wish we could go back in time  \\r\\nDo you ever think back on old memories like that  \\r\\nOr do I ever cross your mind  \\r\\n  \\r\\nOh, how often I wish that again I could kiss  \\r\\nYour sweet lips like I did long ago  \\r\\nAnd how often I long for those two loving arms  \\r\\nThat once held me so gentle and close  \\r\\n  \\r\\nAnd when I think of you and the love we once knew  \\r\\nHow I wish we could go back in time  \\r\\nDo you ever recall these old memories at all  \\r\\nOr do I ever cross your mind  \\r\\n  \\r\\nWhen old memories appear my eyes wont stay clear  \\r\\nWhen I think of those happier times  \\r\\nDo you ever recall these old memories at all  \\r\\nOr do I ever cross your mind  \\r\\n  \\r\\nDo you ever think back on old memories like that  \\r\\nOr do I ever cross your mind\\r\\n\\r\\n\""
+       "\"It's hard being a man  \\r\\nLiving in a garbage pail  \\r\\nMy landlady called me up, oh  \\r\\nShe tried to hit me with a mop  \\r\\n  \\r\\nI can't stand it any more more  \\r\\nI can't stand it any more more, oh  \\r\\nI can't stand it any more more  \\r\\n  \\r\\nBut if baby would just come back, it'd be all right  \\r\\nYeah, if baby would just come back, it would be all right  \\r\\nCome on, baby  \\r\\n  \\r\\nI live with thirteen dead cats  \\r\\nA purple dog that wears spats  \\r\\nThey're all living out in the hall  \\r\\nAnd I can't stand it any more  \\r\\n  \\r\\nI can't stand it any more more  \\r\\nI can't stand it any more more  \\r\\nI can't stand it any more more  \\r\\n  \\r\\nBut if baby would just come back, it'd be all right  \\r\\nOh, if baby would just come back, it would be all right  \\r\\nBe all right, now  \\r\\n  \\r\\nCome on, baby  \\r\\n  \\r\\nI'm tired of living all alone, yeah  \\r\\nNobody ever calls me on the phone  \\r\\nBut when things are getting better  \\r\\nI just play my music louder  \\r\\n  \\r\\nI can't stand it any more more  \\r\\nI can't stand it any more more  \\r\\nI can't stand it any more more  \\r\\nI can't stand it, I can't stand it  \\r\\nI can't stand it, I can't stand it ...  \\r\\n\\r\\n\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,55 +280,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Randy Travis</td>\n",
-       "      <td>Do I Ever Cross Your Mind</td>\n",
-       "      <td>Oh, sometimes I go walking through fields wher...</td>\n",
+       "      <td>Velvet Underground</td>\n",
+       "      <td>I Can't Stand It</td>\n",
+       "      <td>It's hard being a man  \\r\\nLiving in a garbage...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Mary Black</td>\n",
-       "      <td>The Moon And St. Christopher</td>\n",
-       "      <td>When I was young I spoke like a child, And I s...</td>\n",
+       "      <td>Owl City</td>\n",
+       "      <td>Hey Anna</td>\n",
+       "      <td>Hey Anna, it's just a boy you won't understand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Fleetwood Mac</td>\n",
-       "      <td>Big Love</td>\n",
-       "      <td>Looking out for love  \\r\\nIn the night so stil...</td>\n",
+       "      <td>Roy Orbison</td>\n",
+       "      <td>Here Comes The Rain, Baby</td>\n",
+       "      <td>Here comes the rain, baby  \\r\\nGuess it's good...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Stone Roses</td>\n",
-       "      <td>Fools Gold</td>\n",
-       "      <td>The gold road's sure a long road  \\r\\nWinds on...</td>\n",
+       "      <td>Dewa 19</td>\n",
+       "      <td>Kirana</td>\n",
+       "      <td>Kucoba memahami tempatku berlabuh  \\r\\nTerdamp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bonnie Raitt</td>\n",
-       "      <td>Storm Warning</td>\n",
-       "      <td>Storm warning,  \\r\\nFeels like a heavy rain.  ...</td>\n",
+       "      <td>The Monkees</td>\n",
+       "      <td>Come On In</td>\n",
+       "      <td>Come on in,  \\r\\nYou sure look good to me.  \\r...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          artist                          song  \\\n",
-       "0   Randy Travis     Do I Ever Cross Your Mind   \n",
-       "1     Mary Black  The Moon And St. Christopher   \n",
-       "2  Fleetwood Mac                      Big Love   \n",
-       "3    Stone Roses                    Fools Gold   \n",
-       "4   Bonnie Raitt                 Storm Warning   \n",
+       "               artist                       song  \\\n",
+       "0  Velvet Underground           I Can't Stand It   \n",
+       "1            Owl City                   Hey Anna   \n",
+       "2         Roy Orbison  Here Comes The Rain, Baby   \n",
+       "3             Dewa 19                     Kirana   \n",
+       "4         The Monkees                 Come On In   \n",
        "\n",
        "                                                text  \n",
-       "0  Oh, sometimes I go walking through fields wher...  \n",
-       "1  When I was young I spoke like a child, And I s...  \n",
-       "2  Looking out for love  \\r\\nIn the night so stil...  \n",
-       "3  The gold road's sure a long road  \\r\\nWinds on...  \n",
-       "4  Storm warning,  \\r\\nFeels like a heavy rain.  ...  "
+       "0  It's hard being a man  \\r\\nLiving in a garbage...  \n",
+       "1  Hey Anna, it's just a boy you won't understand...  \n",
+       "2  Here comes the rain, baby  \\r\\nGuess it's good...  \n",
+       "3  Kucoba memahami tempatku berlabuh  \\r\\nTerdamp...  \n",
+       "4  Come on in,  \\r\\nYou sure look good to me.  \\r...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "(5000, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "'you are beauti , beauti'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,27 +429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       oh , sometim i go walk through field where we ...\n",
-       "1       when i wa young i spoke like a child , and i s...\n",
-       "2       look out for love in the night so still oh i '...\n",
-       "3       the gold road 's sure a long road wind on thro...\n",
-       "4       storm warn , feel like a heavi rain . wind on ...\n",
+       "0       it 's hard be a man live in a garbag pail my l...\n",
+       "1       hey anna , it 's just a boy you wo n't underst...\n",
+       "2       here come the rain , babi guess it 's goodby a...\n",
+       "3       kucoba memahami tempatku berlabuh terdampar di...\n",
+       "4       come on in , you sure look good to me . come o...\n",
        "                              ...                        \n",
-       "4995    my heart skips-skips-skips-skips-skips-skip a ...\n",
-       "4996    i 've been think reminisc 'bout the day when w...\n",
-       "4997    he rememb the first time he met her he rememb ...\n",
-       "4998    it seem like happi is ju ' a thing call joe he...\n",
-       "4999    toss into my mind , stir the calm you splash m...\n",
+       "4995    let there be light , let there be joy let ther...\n",
+       "4996    `` and now the sever beat of a high school spa...\n",
+       "4997    thi might just be a wast of time , but there '...\n",
+       "4998    i wish my heart could talk to you like i do ev...\n",
+       "4999    love you so much , ca n't count all the way i ...\n",
        "Name: text, Length: 5000, dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,17 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
-       "\twith 269946 stored elements and shape (5000, 23762)>"
+       "\twith 269264 stored elements and shape (5000, 24523)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,17 +501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.        , 0.02243137, 0.03792163, ..., 0.08598076, 0.02243864,\n",
-       "       0.01309369])"
+       "array([1.        , 0.00799601, 0.3301152 , ..., 0.01924517, 0.0222342 ,\n",
+       "       0.06109552])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "np.int64(4987)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,35 +565,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Memories',\n",
-       " 'Back To The Old House',\n",
-       " 'Do I Ever Cross Your Mind',\n",
+       "['Sweet Love',\n",
+       " \"Takin' Me Back\",\n",
+       " 'Touch And Go',\n",
+       " 'Love Is A Sweet Thing',\n",
+       " 'Fantasy',\n",
+       " 'Sweet Young Thing Like You',\n",
        " 'Never',\n",
-       " 'Sabotage',\n",
-       " 'A Long, Long Time Ago',\n",
-       " 'This Old Heart Of Mine (Is Weak For You)',\n",
-       " \"If We Can't Be The Same Old Sweethearts\",\n",
-       " 'Losing You (Track',\n",
-       " 'King Of The Thing',\n",
-       " 'A Long Time Gone',\n",
-       " 'Memories Fade',\n",
-       " 'Hard To Say Goodbye',\n",
-       " 'Say My Name',\n",
-       " 'I Wish',\n",
-       " 'And I Think Of You',\n",
-       " \"Love Isn't Easy\",\n",
-       " 'Same Old Song And Dance',\n",
-       " 'Old Time Rock N Roll',\n",
-       " 'Sweet Evening Breeze']"
+       " \"I Don't Mind\",\n",
+       " \"Cryin' Time\",\n",
+       " 'How Long',\n",
+       " 'Long, Long Way To Go',\n",
+       " 'Darling Days',\n",
+       " 'Child Of Mine',\n",
+       " 'How Long Will I Love You',\n",
+       " 'I Can See It In Your Eyes',\n",
+       " 'At This Moment',\n",
+       " 'Oh My My',\n",
+       " 'Love',\n",
+       " 'Did You Know',\n",
+       " \"I'd Do It All Over Again\"]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
